<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_item_menu_card"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="@string/menu_card_string" />
    <item
        android:id="@+id/nav_item_past_orders"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/past_orders_string" />
    <item
        android:id="@+id/nav_item_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/cart_string" />
    <item
        android:id="@+id/nav_item_notifications"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:title="@string/notifications_string" />
    <item
        android:id="@+id/nav_item_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile_string" />
    <item
        android:id="@+id/nav_item_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings_string" />

</menu>