<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@id/menu_menu_card">

    <fragment
        android:id="@id/menu_menu_card"
        android:name="com.hexamind.uniquorestaurant.Customer.MenuCardFragment"
        android:label="@string/menu_item_menu_card_string"
        tools:layout="@layout/fragment_menu_card" />
    <fragment
        android:id="@id/menu_past_orders"
        android:name="com.hexamind.uniquorestaurant.Customer.PastOrdersFragment"
        android:label="@string/menu_item_past_orders_string"
        tools:layout="@layout/fragment_past_orders" />
    <fragment
        android:id="@id/menu_my_cart"
        android:name="com.hexamind.uniquorestaurant.Customer.MyCartFragment"
        android:label="@string/menu_item_my_cart_string"
        tools:layout="@layout/fragment_my_cart" >
        <action
            android:id="@+id/action_menu_my_cart_to_menu_menu_card_repeat"
            app:destination="@id/menu_menu_card_repeat" />
        <action
            android:id="@+id/action_menu_my_cart_to_menu_past_orders"
            app:destination="@id/menu_past_orders" />
    </fragment>

    <fragment
        android:id="@+id/menu_menu_card_repeat"
        android:name="com.hexamind.uniquorestaurant.Customer.MenuCardFragment"
        android:label="@string/menu_item_menu_card_string"
        tools:layout="@layout/fragment_menu_card" />
</navigation>