<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp"
    app:contentPadding="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:background="@drawable/drawable_past_orders_border"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/secondary_text_dark" />

            <TextView
                android:id="@+id/itemsOrdered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_ordered_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordered_on_string"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/secondary_text_dark" />

            <TextView
                android:id="@+id/dateOrdered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_ordered_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_paid_string"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/amountPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_paid_string"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>